kubernetes/apps/observability/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: observability
spec:
  rules:
  - host: alertmanager.neilwylie.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-alertmanager
            port:
              number: 80
